# pandaquant

./: .env  .gitignore  EXTENSION_GUIDE.md  QUANTITATIVE_SYSTEM_DEVELOPMENT.md  README.md  SIGNAL_MONITORING_MODULE.md  docker-compose.yml  tech_spec.md
.cursor/rules/: my-cursor-rule.mdc
.windsurf/rules/: my-winsurf-rule.md
backend/: Dockerfile  pyproject.toml
backend/app/: models.py
backend/app/alembic/versions/: 030f77424824_add_quantitative_models.py  568589575e25_add_push_fields_to_signal_model.py  64101a0f09c9_add_signal_time_and_backtest_id_to_.py  8284820d4ca3_make_backtest_result_fields_optional.py  9ed2392fec98_make_signal_created_by_optional.py  a69a488eb7bf_add_backtest_result_optional_fields.py  b0b38e1cd1df_add_data_type_field_to_backtestresult.py  b81c3e8e3727_add_backtest_result_table.py  d648e77d566d_remove_signal_type_and_add_strategy_.py  ff7115969a5a_remove_market_data_table_and_switch_to_.py
backend/app/api/: main.py
backend/app/api/routes/: backtests.py  data.py  factors.py  signals.py  strategies.py
backend/app/core/: config.py  logging.py
backend/app/domains/data/: services.py
backend/app/domains/data/sources/: akshare.py  base.py  factory.py  tushare.py
backend/app/domains/factors/: base.py  fundamental.py  report.py  services.py  technical.py
backend/app/domains/signals/: __init__.py  base.py  email.py  services.py  wechat.py
backend/app/domains/strategies/: base_strategy.py  daily_data_group.py  data_group.py  dual_moving_average_strategy.py  enums.py  factory.py  services.py  technical_strategy.py
backend/tests/api/routes/: test_backtests.py  test_data.py  test_data_integration.py  test_factors.py  test_signals.py  test_strategies.py
backend/tests/domains/data/services/: test_data_service_integration.py
backend/tests/domains/data/sources/: test_akshare_integration.py  test_factory_integration.py  test_tushare_integration.py
backend/tests/domains/factors/: test_factor_service.py  test_fundamental_factors.py  test_report_factors.py  test_technical_factors.py
backend/tests/domains/signals/: test_push_channels.py  test_signal_service.py
backend/tests/domains/strategies/: test_data_group.py  test_dual_moving_average_strategy.py  test_strategy_service.py
backend/tests/integration/: test_full_backtest_flow.py  test_module_integration.py  test_paper_trading_flow.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
(+25 files in other folders)
